# rtorrent-natpmp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __main__.py
app/core/: config.py
conf/: app.json.sample
deploy/: run.sh
deploy/freebsd/: rtorrent_natpmp
typings/natpmp/: NATPMP.pyi  __init__.pyi
